vpc/ticket1/ngw.tf
resource "aws_eip" "example" {
  vpc      = true
}



resource "aws_nat_gateway" "example" {
allocation_id = aws_eip.example.id
subnet_id    = aws_subnet.private1.id







  # Please do not change below code 
  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
  tags = local.task_tags
}
